Updated LinkedIn, Github profile

--- a/dylan_portfolio/templates/base.html
+++ b/dylan_portfolio/templates/base.html
@@ -21,7 +21,7 @@
         <nav class="navbar">
             <ul class="navbar-nav">
               <li class="logo">
-                <a href="#" class="nav-link">
+                <a href="/" class="nav-link">
                   <span class="link-text logo-text">DYLAN</span>
                   <svg
                     aria-hidden="true"
@@ -49,136 +49,52 @@
                 </a>
               </li>
 
+              <!-- Linkedin -->
               <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="1771" height="2500" viewBox="221.807 89.47 440 621.061" enable-background="new 221.807 89.47 440 621.061">
-                        <filter id="a" width="150%" height="150%" x="-5%" y="-5%">
-                        <feFlood flood-color="#000" result="floodFill" flood-opacity=".5"/>
-                        <feComposite in="floodFill" in2="SourceAlpha" operator="in" result="coloredAlpha"/>
-                        <feGaussianBlur in="coloredAlpha" result="blur" stdDeviation="8"/>
-                        <feComposite in="blur" in2="SourceGraphic" operator="out" result="maskedOffsetBlur"/>
-                        <feMerge>
-                            <feMergeNode in="maskedOffsetBlur"/>
-                            <feMergeNode in="SourceGraphic"/>
-                        </feMerge>
-                        </filter>
-                        <g filter="url(#a)">
-                        <path fill="#e44d26" d="M261.849 660.647l-40.042-449.125h440l-40.086 449.054-180.184 49.954z"/>
-                        <path fill="#f16529" d="M441.807 672.348l145.596-40.367 34.258-383.735H441.807z"/>
-                        <path fill="#ebebeb" d="M441.807 414.82h-72.888l-5.035-56.406h77.923V303.33H303.683l1.32 14.778 13.538 151.794h123.266zM441.807 557.876l-.242.066-61.346-16.566-3.922-43.93h-55.294l7.718 86.489 112.834 31.323.252-.071z"/>
-                        <path d="M262.745 89.47h27.992v27.656h25.606V89.47h27.993v83.75h-27.993v-28.044h-25.606v28.044h-27.99l-.002-83.75zM381.149 117.244h-24.642V89.47H433.8v27.774h-24.654v55.976H381.15v-55.976h-.001zM446.065 89.47h29.19l17.955 29.428 17.938-29.428h29.2v83.75h-27.882v-41.512l-19.259 29.778h-.481l-19.272-29.778v41.512h-27.39V89.47zM554.277 89.47h28v56.068h39.368v27.682h-67.368V89.47z"/>
-                        <path fill="#fff" d="M441.617 414.82v55.082h67.83l-6.395 71.44-61.435 16.58v57.307l112.924-31.294.826-9.309 12.946-145.014 1.344-14.792h-14.842zM441.617 303.33v55.084H574.67l1.103-12.382 2.51-27.924 1.318-14.778z"/>
-                        </g>
+                <a href="https://www.linkedin.com/in/huudaonguyen/" class="nav-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="64" height="64" >
+                      <path d="M29.63.001H2.362C1.06.001 0 1.034 0 2.306V29.69C0 30.965 1.06 32 2.362 32h27.27C30.937 32 32 30.965 32 29.69V2.306C32 1.034 30.937.001 29.63.001z" fill="#0177b5"/><path d="M4.745 11.997H9.5v15.27H4.745zm2.374-7.6c1.517 0 2.75 1.233 2.75 2.75S8.636 9.9 7.12 9.9a2.76 2.76 0 0 1-2.754-2.753 2.75 2.75 0 0 1 2.753-2.75m5.35 7.6h4.552v2.087h.063c.634-1.2 2.182-2.466 4.5-2.466 4.806 0 5.693 3.163 5.693 7.274v8.376h-4.743V19.84c0-1.77-.032-4.05-2.466-4.05-2.47 0-2.85 1.93-2.85 3.92v7.554h-4.742v-15.27z" fill="#fff"/>
                     </svg>
-                  <span class="link-text">index.html</span>
+                  <span class="link-text">LinkedIn</span>
                 </a>
               </li>
 
+              <!-- Github -->
               <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="1771" height="2500" viewBox="221.807 89.47 440 621.061" enable-background="new 221.807 89.47 440 621.061">
-                        <filter id="a" width="150%" height="150%" x="-5%" y="-5%">
-                        <feFlood flood-color="#000" result="floodFill" flood-opacity=".5"/>
-                        <feComposite in="floodFill" in2="SourceAlpha" operator="in" result="coloredAlpha"/>
-                        <feGaussianBlur in="coloredAlpha" result="blur" stdDeviation="8"/>
-                        <feComposite in="blur" in2="SourceGraphic" operator="out" result="maskedOffsetBlur"/>
-                        <feMerge>
-                            <feMergeNode in="maskedOffsetBlur"/>
-                            <feMergeNode in="SourceGraphic"/>
-                        </feMerge>
-                        </filter>
-                        <g filter="url(#a)">
-                        <path fill="#e44d26" d="M261.849 660.647l-40.042-449.125h440l-40.086 449.054-180.184 49.954z"/>
-                        <path fill="#f16529" d="M441.807 672.348l145.596-40.367 34.258-383.735H441.807z"/>
-                        <path fill="#ebebeb" d="M441.807 414.82h-72.888l-5.035-56.406h77.923V303.33H303.683l1.32 14.778 13.538 151.794h123.266zM441.807 557.876l-.242.066-61.346-16.566-3.922-43.93h-55.294l7.718 86.489 112.834 31.323.252-.071z"/>
-                        <path d="M262.745 89.47h27.992v27.656h25.606V89.47h27.993v83.75h-27.993v-28.044h-25.606v28.044h-27.99l-.002-83.75zM381.149 117.244h-24.642V89.47H433.8v27.774h-24.654v55.976H381.15v-55.976h-.001zM446.065 89.47h29.19l17.955 29.428 17.938-29.428h29.2v83.75h-27.882v-41.512l-19.259 29.778h-.481l-19.272-29.778v41.512h-27.39V89.47zM554.277 89.47h28v56.068h39.368v27.682h-67.368V89.47z"/>
-                        <path fill="#fff" d="M441.617 414.82v55.082h67.83l-6.395 71.44-61.435 16.58v57.307l112.924-31.294.826-9.309 12.946-145.014 1.344-14.792h-14.842zM441.617 303.33v55.084H574.67l1.103-12.382 2.51-27.924 1.318-14.778z"/>
-                        </g>
-                    </svg>
-                  <span class="link-text">about.html</span>
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="1771" height="2500" viewBox="221.807 89.47 440 621.061" enable-background="new 221.807 89.47 440 621.061">
-                        <filter id="a" width="150%" height="150%" x="-5%" y="-5%">
-                        <feFlood flood-color="#000" result="floodFill" flood-opacity=".5"/>
-                        <feComposite in="floodFill" in2="SourceAlpha" operator="in" result="coloredAlpha"/>
-                        <feGaussianBlur in="coloredAlpha" result="blur" stdDeviation="8"/>
-                        <feComposite in="blur" in2="SourceGraphic" operator="out" result="maskedOffsetBlur"/>
-                        <feMerge>
-                            <feMergeNode in="maskedOffsetBlur"/>
-                            <feMergeNode in="SourceGraphic"/>
-                        </feMerge>
-                        </filter>
-                        <g filter="url(#a)">
-                        <path fill="#e44d26" d="M261.849 660.647l-40.042-449.125h440l-40.086 449.054-180.184 49.954z"/>
-                        <path fill="#f16529" d="M441.807 672.348l145.596-40.367 34.258-383.735H441.807z"/>
-                        <path fill="#ebebeb" d="M441.807 414.82h-72.888l-5.035-56.406h77.923V303.33H303.683l1.32 14.778 13.538 151.794h123.266zM441.807 557.876l-.242.066-61.346-16.566-3.922-43.93h-55.294l7.718 86.489 112.834 31.323.252-.071z"/>
-                        <path d="M262.745 89.47h27.992v27.656h25.606V89.47h27.993v83.75h-27.993v-28.044h-25.606v28.044h-27.99l-.002-83.75zM381.149 117.244h-24.642V89.47H433.8v27.774h-24.654v55.976H381.15v-55.976h-.001zM446.065 89.47h29.19l17.955 29.428 17.938-29.428h29.2v83.75h-27.882v-41.512l-19.259 29.778h-.481l-19.272-29.778v41.512h-27.39V89.47zM554.277 89.47h28v56.068h39.368v27.682h-67.368V89.47z"/>
-                        <path fill="#fff" d="M441.617 414.82v55.082h67.83l-6.395 71.44-61.435 16.58v57.307l112.924-31.294.826-9.309 12.946-145.014 1.344-14.792h-14.842zM441.617 303.33v55.084H574.67l1.103-12.382 2.51-27.924 1.318-14.778z"/>
-                        </g>
-                    </svg>
-                  <span class="link-text">contact.html</span>
-                </a>
-              </li>
-
-              <li class="nav-item" id="themeButton">
-                <a href="#" class="nav-link">
-                  <svg
-                    class="theme-icon"
-                    id="lightIcon"
-                    aria-hidden="true"
-                    focusable="false"
-                    data-prefix="fad"
-                    data-icon="moon-stars"
-                    role="img"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 512 512"
-                    class="svg-inline--fa fa-moon-stars fa-w-16 fa-7x"
-                  >
-                    <g class="fa-group">
-                      <path
-                        fill="currentColor"
-                        d="M320 32L304 0l-16 32-32 16 32 16 16 32 16-32 32-16zm138.7 149.3L432 128l-26.7 53.3L352 208l53.3 26.7L432 288l26.7-53.3L512 208z"
-                        class="fa-secondary"
-                      ></path>
-                      <path
-                        fill="currentColor"
-                        d="M332.2 426.4c8.1-1.6 13.9 8 8.6 14.5a191.18 191.18 0 0 1-149 71.1C85.8 512 0 426 0 320c0-120 108.7-210.6 227-188.8 8.2 1.6 10.1 12.6 2.8 16.7a150.3 150.3 0 0 0-76.1 130.8c0 94 85.4 165.4 178.5 147.7z"
-                        class="fa-primary"
-                      ></path>
+                <a href="https://github.com/daonguyen97" class="nav-link">
+                  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="438.536px" height="438.536px" viewBox="0 0 438.536 438.536" style="enable-background:new 0 0 438.536 438.536;" xml:space="preserve">
+                    <g>
+                      <path d="M414.41,24.123C398.326,8.042,378.964,0,356.309,0H82.225C59.577,0,40.208,8.042,24.123,24.123    C8.042,40.207,0,59.576,0,82.225v274.088c0,22.65,8.042,42.017,24.123,58.098c16.084,16.084,35.454,24.126,58.102,24.126h63.953    c4.184,0,7.327-0.144,9.42-0.424c2.092-0.288,4.184-1.526,6.279-3.717c2.096-2.187,3.14-5.376,3.14-9.562    c0-0.568-0.05-7.046-0.144-19.417c-0.097-12.375-0.144-22.176-0.144-29.41l-6.567,1.143c-4.187,0.76-9.469,1.095-15.846,0.999    c-6.374-0.096-12.99-0.76-19.841-1.998c-6.855-1.239-13.229-4.093-19.13-8.562c-5.898-4.477-10.085-10.328-12.56-17.559    l-2.856-6.571c-1.903-4.373-4.899-9.229-8.992-14.554c-4.093-5.332-8.232-8.949-12.419-10.852l-1.999-1.428    c-1.331-0.951-2.568-2.098-3.711-3.429c-1.141-1.335-1.997-2.669-2.568-3.997c-0.571-1.335-0.097-2.43,1.427-3.289    c1.524-0.855,4.281-1.279,8.28-1.279l5.708,0.855c3.808,0.76,8.516,3.042,14.134,6.851c5.614,3.806,10.229,8.754,13.846,14.843    c4.38,7.806,9.657,13.75,15.846,17.843c6.184,4.097,12.419,6.143,18.699,6.143s11.704-0.476,16.274-1.424    c4.565-0.954,8.848-2.385,12.847-4.288c1.713-12.751,6.377-22.559,13.988-29.41c-10.848-1.143-20.602-2.854-29.265-5.14    c-8.658-2.286-17.605-5.995-26.835-11.136c-9.234-5.14-16.894-11.512-22.985-19.13c-6.09-7.618-11.088-17.61-14.987-29.978    c-3.901-12.375-5.852-26.652-5.852-42.829c0-23.029,7.521-42.637,22.557-58.814c-7.044-17.32-6.379-36.732,1.997-58.242    c5.52-1.714,13.706-0.428,24.554,3.855c10.85,4.286,18.794,7.951,23.84,10.992c5.046,3.042,9.089,5.614,12.135,7.71    c17.705-4.949,35.976-7.423,54.818-7.423c18.841,0,37.115,2.474,54.821,7.423l10.849-6.852c7.426-4.57,16.18-8.757,26.269-12.562    c10.088-3.806,17.795-4.854,23.127-3.14c8.562,21.51,9.328,40.922,2.279,58.241c15.036,16.179,22.559,35.786,22.559,58.815    c0,16.18-1.951,30.505-5.852,42.969c-3.898,12.467-8.939,22.463-15.13,29.981c-6.184,7.519-13.894,13.843-23.124,18.986    c-9.232,5.137-18.178,8.853-26.84,11.132c-8.661,2.286-18.414,4.004-29.263,5.147c9.891,8.562,14.839,22.072,14.839,40.538v68.238    c0,3.237,0.472,5.852,1.424,7.851c0.958,1.998,2.478,3.374,4.571,4.141c2.102,0.76,3.949,1.235,5.571,1.424    c1.622,0.191,3.949,0.287,6.995,0.287h63.953c22.648,0,42.018-8.042,58.095-24.126c16.084-16.084,24.126-35.454,24.126-58.102    V82.225C438.533,59.576,430.491,40.204,414.41,24.123z"/>
                     </g>
                   </svg>
-                  <svg
-                    class="theme-icon"
-                    id="solarIcon"
-                    aria-hidden="true"
-                    focusable="false"
-                    data-prefix="fad"
-                    data-icon="sun"
-                    role="img"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 512 512"
-                    class="svg-inline--fa fa-sun fa-w-16 fa-7x"
-                  >
-                    <g class="fa-group">
-                      <path
-                        fill="currentColor"
-                        d="M502.42 240.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.41-94.8a17.31 17.31 0 0 0-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4a17.31 17.31 0 0 0 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.41-33.5 47.3 94.7a17.31 17.31 0 0 0 31 0l47.31-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3a17.33 17.33 0 0 0 .2-31.1zm-155.9 106c-49.91 49.9-131.11 49.9-181 0a128.13 128.13 0 0 1 0-181c49.9-49.9 131.1-49.9 181 0a128.13 128.13 0 0 1 0 181z"
-                        class="fa-secondary"
-                      ></path>
-                      <path
-                        fill="currentColor"
-                        d="M352 256a96 96 0 1 1-96-96 96.15 96.15 0 0 1 96 96z"
-                        class="fa-primary"
-                      ></path>
-                    </g>
-                  </svg>
-                  <span class="link-text">Dylan Nguyen 2020</span>
+                  <span class="link-text">GitHub</span>
                 </a>
               </li>
+              <!-- Projects -->
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 32 32">
+                    <defs>
+                      <linearGradient id="A" x1="811.527" y1="574.895" x2="665.255" y2="573.732" gradientUnits="userSpaceOnUse">
+                        <stop offset="0" stop-color="#366a96"/>
+                        <stop offset="1" stop-color="#3679b0"/>
+                      </linearGradient>
+                      <linearGradient id="B" x1="862.824" y1="642.176" x2="573.276" y2="642.176" gradientUnits="userSpaceOnUse">
+                        <stop offset="0" stop-color="#ffc836"/>
+                        <stop offset="1" stop-color="#ffe873"/>
+                      </linearGradient>
+                    </defs>
+                    <g transform="matrix(.1617 0 0 .158089 -107.53764 -81.66187)">
+                      <path d="M716.255 544.487c0-13.623 3.653-21.034 23.822-24.563 13.693-2.4 31.25-2.7 47.627 0 12.935 2.135 23.822 11.77 23.822 24.563v44.945c0 13.182-10.57 23.98-23.822 23.98h-47.627c-16.164 0-29.787 13.782-29.787 29.363v21.564h-16.376c-13.852 0-21.917-9.988-25.305-23.964-4.57-18.776-4.376-29.963 0-47.945 3.794-15.687 15.917-23.964 29.77-23.964h65.52v-6h-47.645v-17.98z" fill="url(#A)"/>
+                      <path d="M811.527 688.32c0 13.623-11.823 20.523-23.822 23.964-18.052 5.188-32.54 4.394-47.627 0-12.6-3.67-23.822-11.17-23.822-23.964v-44.945c0-12.935 10.782-23.98 23.822-23.98h47.627c15.864 0 29.787-13.71 29.787-29.963v-20.964h17.858c13.87 0 20.4 10.305 23.822 23.964 4.764 18.97 4.976 33.157 0 47.945-4.817 14.364-9.97 23.964-23.822 23.964H763.9v6h47.627v17.98z" fill="url(#B)"/>
+                      <path d="M728.166 541.505c0-4.976 3.988-9 8.93-9 4.923 0 8.93 4.023 8.93 9 0 4.96-4.006 8.982-8.93 8.982-4.94 0-8.93-4.023-8.93-8.982zm53.59 149.798c0-4.96 4.006-8.982 8.93-8.982 4.94 0 8.93 4.023 8.93 8.982 0 4.976-3.988 9-8.93 9-4.923 0-8.93-4.023-8.93-9z" fill="#fff"/>
+                    </g>
+                  </svg>
+                  <span class="link-text">Projects</span>
+                </a>
+              </li>
+              <li></li>
+
             </ul>
           </nav>
         <main>
