--- a/dylan_portfolio/templates/index.html
+++ b/dylan_portfolio/templates/index.html
@@ -3,6 +3,11 @@
 {% block content %}
 # Hello Guys, I am Dylan Nguyen
 # Software Developer
+# Email: daonh31@gmail.com
+
+#Portfolio Project
+#Language: Python (Django Framework)
+
 # My Websites still under construction
 /*
     ______       _                 _   _
