--- a/dylan_portfolio/templates/base.html
+++ b/dylan_portfolio/templates/base.html
@@ -16,6 +16,9 @@
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
             rel="stylesheet"
         />
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
     </head>
     <body>
         <nav class="navbar">
